descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2008-XX-XX  Release 7.12.3                                     ---
----------------------------------------------------------------------

* fixed rt/rtedge clipping bug - Bob Parker
* new mged mirror command options for arbitrary vectors - Bob Parker
* fix -k rt option to work for surface normal lighting - Cliff Yapp
* add tire proc-db for easy tire/wheel model creation - Cliff Yapp
* added query pixel support to the Windows framebuffer - Bob Parker
* mirror across a distance along a given axis in mged - Bob Parker


----------------------------------------------------------------------
--- 2008-04-23  Release 7.12.2                                     ---
----------------------------------------------------------------------

* new pinewood boxcar example geometry database - Cliff Yapp
* add mk_arb5, mk_arb6 and mk_arb7 to libwdb - Cliff Yapp
* added xclone command to mged for xpushed deep copies - Bob Parker
* fixed clone infinite loop for combinations - Sean Morrison, C. Yapp
* wrap mged resource paths with spaces - Bob Parker, Elena Bautu
* new -k 'cutaway view' option added to rt - John Anderson
* improved mged classic mode display manager selection - Sean Morrison
* fixed mged crash when getting forms of sketch objects - Bob Parker
* new -u units option added to rtarea - Sean Morrison
* added uniform binary object creation to mged GUI - John Anderson
* added e, l, o, i options to mged saveview command - Sean Morrison


----------------------------------------------------------------------
--- 2008-03-11  Release 7.12.0                                     ---
----------------------------------------------------------------------

Coalescing after just over a year of concentrated development efforts,