@@ -69,51 +69,51 @@
 <TD WIDTH="22%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#bev"><FONT SIZE=2>bev</FONT></A></TD>
 <TD WIDTH="21%" VALIGN="MIDDLE">
+<FONT SIZE=2><P></FONT><A HREF="#binary"><FONT SIZE=2>binary</FONT></A></TD>
+</TR>
+<TR><TD WIDTH="18%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#bot_condense"><FONT SIZE=2>bot_condense</FONT></A></TD>
-</TR>
-<TR><TD WIDTH="18%" VALIGN="MIDDLE">
+<TD WIDTH="19%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#bot_decimate"><FONT SIZE=2>bot_decimate</FONT></A></TD>
-<TD WIDTH="19%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#bot_face_fuse"><FONT SIZE=2>bot_face_fuse</FONT></A></TD>
 <TD WIDTH="20%" VALIGN="MIDDLE">
+<FONT SIZE=2><P></FONT><A HREF="#bot_face_fuse"><FONT SIZE=2>bot_face_fuse</FONT></A></TD>
+<TD WIDTH="22%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#bot_face_sort"><FONT SIZE=2>bot_face_sort</FONT></A></TD>
-<TD WIDTH="22%" VALIGN="MIDDLE">
+<TD WIDTH="21%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#bot_face_fuse"><FONT SIZE=2>bot_face_fuse</FONT></A></TD>
-<TD WIDTH="21%" VALIGN="MIDDLE">
+</TR>
+<TR><TD WIDTH="18%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#bot_vertex_fuse"><FONT SIZE=2>bot_vertex_fuse</FONT></A></TD>
-</TR>
-<TR><TD WIDTH="18%" VALIGN="MIDDLE">
+<TD WIDTH="19%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#build_region"><FONT SIZE=2>build_region</FONT></A></TD>
-<TD WIDTH="19%" VALIGN="MIDDLE">
+<TD WIDTH="20%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#c"><FONT SIZE=2>c</FONT></A></TD>
-<TD WIDTH="20%" VALIGN="MIDDLE">
+<TD WIDTH="22%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#cat"><FONT SIZE=2>cat</FONT></A></TD>
-<TD WIDTH="22%" VALIGN="MIDDLE">
+<TD WIDTH="21%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#center"><FONT SIZE=2>center</FONT></A></TD>
-<TD WIDTH="21%" VALIGN="MIDDLE">
+</TR>
+<TR><TD WIDTH="18%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#color"><FONT SIZE=2>color</FONT></A></TD>
-</TR>
-<TR><TD WIDTH="18%" VALIGN="MIDDLE">
+<TD WIDTH="19%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#comb"><FONT SIZE=2>comb</FONT></A></TD>
-<TD WIDTH="19%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#comb_color"><FONT SIZE=2>comb_color</FONT></A></TD>
 <TD WIDTH="20%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#copyeval"><FONT SIZE=2>copyeval</FONT></A></TD>
+<FONT SIZE=2><P></FONT><A HREF="#comb_color"><FONT SIZE=2>comb_color</FONT></A></TD>
 <TD WIDTH="22%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#copymat"><FONT SIZE=2>copymat</FONT></A></TD>
+<FONT SIZE=2><P></FONT><A HREF="#copyeval"><FONT SIZE=2>copyeval</FONT></A></TD>
 <TD WIDTH="21%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#cp"><FONT SIZE=2>cp</FONT></A></TD>
+<FONT SIZE=2><P></FONT><A HREF="#copymat"><FONT SIZE=2>copymat</FONT></A></TD>
 </TR>
 <TR><TD WIDTH="18%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#cpi"><FONT SIZE=2>cpi</FONT></A></TD>
+<FONT SIZE=2><P></FONT><A HREF="#cp"><FONT SIZE=2>cp</FONT></A></TD>
 <TD WIDTH="19%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#d"><FONT SIZE=2>d</FONT></A></TD>
+<FONT SIZE=2><P></FONT><A HREF="#cpi"><FONT SIZE=2>cpi</FONT></A></TD>
 <TD WIDTH="20%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#dall"><FONT SIZE=2>dall</FONT></A></TD>
+<FONT SIZE=2><P></FONT><A HREF="#d"><FONT SIZE=2>d</FONT></A></TD>
 <TD WIDTH="22%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#db"><FONT SIZE=2>db</FONT></A></TD>
+<FONT SIZE=2><P></FONT><A HREF="#dall"><FONT SIZE=2>dall</FONT></A></TD>
 <TD WIDTH="21%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#dbbinary"><FONT SIZE=2>dbbinary</FONT></A></TD>
+<FONT SIZE=2><P></FONT><A HREF="#db"><FONT SIZE=2>db</FONT></A></TD>
 </TR>
 <TR><TD WIDTH="18%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#db_glob"><FONT SIZE=2>db_glob</FONT></A></TD>
@@ -887,7 +887,34 @@
 </DL>
 </B><FONT SIZE=2><P>-- Create a triangulated object by intersecting objects <I>sphere1</I> and <I>sphere2.</I> </P>
 <P><HR ALIGN="RIGHT"></P>
-</FONT><B><DL>
+</FONT>
+
+<DL>
+<B><A NAME="binary"></A>binary </B><I>[-o|-i pattern type] dest source</I> </DT>
+<DD>The &quot;binary&quot; command is used to create or retrieve binary opaque objects.  One of <I>-i</I> or <I>-o</I> must be specified.</DD>
+<dd>The <i>-o</i> option &quot;outputs&quot; or extracts a binary object from the database object <i>source</i> to a file called <i>dest</i>.</dd>
+<dd>The <i>-i</i> option &quot;inputs&quot; or imports a file called <i>source</i> into a binary object called <i>dest</i> in the database.  There are two additional arguments that must be specified with the <i>-i</i> option:  pattern and type.  Currently, only uniform binary objects (arrays of values) are supported.  As a result, the <i>pattern</i> is always <i>u</i> for &quot;uniform&quot; pattern.  The <i>type</i> can be one of the following:
+<DD><i>f </I>-&gt; float</DD>
+<DD><I>d </I>-&gt; double</DD>
+<DD><I>c </I>-&gt; char (8 bit)</DD>
+<DD><I>s </I>-&gt; short (16 bit)</DD>
+<DD><I>i </I>-&gt; int (32 bit)</DD>
+<DD><I>l </I>-&gt; long (64 bit)</DD>
+<DD><I>C </I>-&gt; unsigned char (8 bit)</DD>
+<DD><I>S </I>-&gt; unsigned short (16 bit)</DD>
+<DD><I>I </I>-&gt; unsigned int (32 bit)</DD>
+<DD><I>L </I>-&gt; unsigned long (64 bit)</DD>
+<DD> </DD>
+<DT><FONT SIZE=4>Examples: </DT></FONT>
+<DD> <TT>mged&gt;</TT> <B>binary -i -u c cmds /usr/brlcad/html/manuals/mged/mged_cmds.html</B></DD>
+<DD>-- Create an opaque uniform binary object of characters with the name <I>cmds</I> that contains the contents of the file <I>/usr/brlcad/html/manuals/mged/mged_cmds.html.</I></DD>
+<DD></DD>
+<DD><TT>mged&gt;</TT> <B>binary -o /home/jim/cmds.html cmds</B></DD>
+<DD>-- Copy the contents of the binary object named <I>cmds</I> into the file named <i>/home/jim/cmds.html.</i></DD>
+</dl>
+<DT><HR ALIGN="RIGHT"></DT>
+
+<B><DL>
 <DT><A NAME="c"><A NAME="bot_condense"></A></A>bot_condense </B><I>new_bot_primitive old_bot_primitive </DT>
 </I><DD>The &quot;bot_condense&quot; command is used to eliminate unused vertices from a BOT primitive.  It returns the number of vertices eliminated. </DD>
 <DD></DD>
@@ -1138,32 +1165,6 @@ mged <B>db form tgc</B> <BR>
 </FONT> <B>
 <DL>
 <DT><A NAME="db_glob"></a>
-
-
-<A NAME="dbbinary"></A>dbbinary </B><I>[-o|-i pattern type] dest source</I> </DT>
-<DD>The &quot;dbbinary&quot; command is used to create or retrieve binary opaque objects.  One of <I>-i</I> or <I>-o</I> must be specified.</DD>
-<dd>The <i>-o</i> option &quot;outputs&quot; or extracts a binary object from the database object <i>source</i> to a file called <i>dest</i>.</dd>
-<dd>The <i>-i</i> option &quot;inputs&quot; or imports a file called <i>source</i> into a binary object called <i>dest</i> in the database.  There are two additional arguments that must be specified with the <i>-i</i> option:  pattern and type.  Currently, only uniform binary objects (arrays of values) are supported.  As a result, the <i>pattern</i> is always <i>u</i> for &quot;uniform&quot; pattern.  The <i>type</i> can be one of the following:
-<DD><i>f </I>-&gt; float</DD>
-<DD><I>d </I>-&gt; double</DD>
-<DD><I>c </I>-&gt; char (8 bit)</DD>
-<DD><I>s </I>-&gt; short (16 bit)</DD>
-<DD><I>i </I>-&gt; int (32 bit)</DD>
-<DD><I>l </I>-&gt; long (64 bit)</DD>
-<DD><I>C </I>-&gt; unsigned char (8 bit)</DD>
-<DD><I>S </I>-&gt; unsigned short (16 bit)</DD>
-<DD><I>I </I>-&gt; unsigned int (32 bit)</DD>
-<DD><I>L </I>-&gt; unsigned long (64 bit)</DD>
-<DD> </DD>
-
-<DT><FONT SIZE=4>Examples: </DT></FONT>
-<DD> <TT>mged&gt;</TT> <B>dbbinary -i -u c cmds /usr/brlcad/html/manuals/mged/mged_cmds.html</B></DD>
-<DD>-- Create an opaque uniform binary object of characters with the name <I>cmds</I> that contains the contents of the file <I>/usr/brlcad/html/manuals/mged/mged_cmds.html.</I></DD>
-<DD></DD>
-<DD><TT>mged&gt;</TT> <B>dbbinary -o /home/jim/cmds.html cmds</B></DD>
-<DD>-- Copy the contents of the binary object named <I>cmds</I> into the file named <i>/home/jim/cmds.html.</i></DD>
-</dl>
-<DT><HR ALIGN="RIGHT"></DT>
 <B><DT>db_glob</B> <I>cmd_string</DT>
 </I><DD>Globs <I>cmd_string</I> against the MGED database resulting in an expanded command string.</DD>
 <FONT SIZE=4><DT>Examples:</DT>
